syntax ="proto3";

package auth;
option go_package="./pkg/pb";
service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}
message RegisterRequest {
    string email = 1;
    string password = 2;
}
message RegisterResponse {
    string error = 1;
    int64 status=2;
}
message LoginRequest {
    string email = 1;
    string password = 2;
}
message LoginResponse {
    string error = 1;
    int64 status=2;
    string token=3;
}
message ValidateRequest {
    string token = 1;
}
message ValidateResponse {
    string error = 2;
    int64 status=1;
    int64 userId=3;

}

